--- a/style.scss
+++ b/style.scss
@@ -18,6 +18,10 @@ $grayWhite: #d3d3d3;
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   position: relative;
   font-family: $text;
@@ -51,12 +55,14 @@ body {
     left: 1.5rem;
     top: 1.5rem;
     z-index: 2500;
+    cursor: pointer;
   }
 
   .header {
     position: relative; //fixed earlier for mobile menu support
     display: flex;
     z-index: 1000;
+    width: 100%;
 
     @media screen and (min-width: 768px) {
       height: 6.5rem;
@@ -158,7 +164,9 @@ body {
         }
 
         nav {
-          width: 50%;
+          .exit {
+            display: none;
+          }
 
           @media screen and (min-width: 960px) {
             width: 100%;
@@ -185,7 +193,6 @@ body {
           }
 
           .nav-list {
-            display: none;
 
             @media screen and (min-width: 960px) {
               display: flex;
@@ -221,19 +228,19 @@ body {
               padding: 0.5rem 1.5rem 0.75rem 1.5rem;
               margin-top: -10px;
               font-weight: 700;
-              color: $coolPink;
+              background-image: -webkit-linear-gradient(-75deg, #f65112, #a00000, #f40001);
+              color: white;
 
               &:hover {
                 background-color: $coolPink;
-                color: white;
-                border: 2px solid $darkShade;
               }
             }
           }
 
           .acct-detail {
+            position: relative;
             .acct-list {
-              position: fixed;//initially fixed for mobiles
+              position: fixed;
               top: 0;
               right: 0;
               background-color: #272a31;
@@ -270,7 +277,7 @@ body {
           }
         }
       }
-    }// Nav bar ends here
+    } // Nav bar ends here
   }
 
   .container {
@@ -455,7 +462,6 @@ body {
             justify-content: center;
             align-items: center;
             padding: 0.25rem;
-            box-shadow: 2px 2px 10px 20px;
             border-radius: 0;
             height: auto;
             min-height: 160px;
